--- a/src/css/style.css
+++ b/src/css/style.css
@@ -185,27 +185,27 @@ header .login__modal--overlay {
   -o-transform: scale(1.1);
 }
 
-.iniciais__item[data-tipo="Planta"]:hover {
+.iniciais__item[data-type*="grass"]:hover {
   background-color: #7bed9f;
 }
 
-.iniciais__item[data-tipo="Planta"] button {
+.iniciais__item[data-type*="grass"] button {
   background-color: #2ed573;
 }
 
-.iniciais__item[data-tipo="Água"]:hover {
+.iniciais__item[data-type*="water"]:hover {
   background-color: #70a1ff;
 }
 
-.iniciais__item[data-tipo="Água"] button {
+.iniciais__item[data-type*="water"] button {
   background-color: #1e90ff;
 }
 
-.iniciais__item[data-tipo="Fogo"]:hover {
+.iniciais__item[data-type*="fire"]:hover {
   background-color: #ff6b81;
 }
 
-.iniciais__item[data-tipo="Fogo"] button {
+.iniciais__item[data-type*="fire"] button {
   background-color: #ff4757;
 }
 
@@ -274,15 +274,15 @@ header .login__modal--overlay {
   width: 450px;
 }
 
-.iniciais__modal--wrapper[data-tipo="Planta"] {
+.iniciais__modal--wrapper[data-type*="grass"] {
   background-color: #7bed9f;
 }
 
-.iniciais__modal--wrapper[data-tipo="Água"] {
+.iniciais__modal--wrapper[data-type*="water"] {
   background-color: #70a1ff;
 }
 
-.iniciais__modal--wrapper[data-tipo="Fogo"] {
+.iniciais__modal--wrapper[data-type*="fire"] {
   background-color: #ff6b81;
 }
 
@@ -300,15 +300,15 @@ header .login__modal--overlay {
   z-index: 0;
 }
 
-.iniciais__modal--wrapper[data-tipo="Planta"]::before {
+.iniciais__modal--wrapper[data-type*="grass"]::before {
   background-image: url(./../assets/leaf.svg);
 }
 
-.iniciais__modal--wrapper[data-tipo="Água"]::before {
+.iniciais__modal--wrapper[data-type*="water"]::before {
   background-image: url(./../assets/water.svg);
 }
 
-.iniciais__modal--wrapper[data-tipo="Fogo"]::before {
+.iniciais__modal--wrapper[data-type*="fire"]::before {
   background-image: url(./../assets/fire.svg);
 }
 
@@ -351,15 +351,15 @@ header .login__modal--overlay {
   -o-border-radius: 100%;
 }
 
-.iniciais__modal--fechar[data-tipo="Planta"] {
+.iniciais__modal--fechar[data-type*="grass"] {
   background-color: #218c74;
 }
 
-.iniciais__modal--fechar[data-tipo="Água"] {
+.iniciais__modal--fechar[data-type*="water"] {
   background-color: #227093;
 }
 
-.iniciais__modal--fechar[data-tipo="Fogo"] {
+.iniciais__modal--fechar[data-type*="fire"] {
   background-color: #b33939;
 }
 
@@ -477,15 +477,15 @@ header .login__modal--overlay {
   width: 30%;
 }
 
-.iniciais__modal--item .evolucoes h3[data-tipo="Planta"] {
+.iniciais__modal--item .evolucoes h3[data-type*="grass"] {
   background-color: #218c74;
 }
 
-.iniciais__modal--item .evolucoes h3[data-tipo="Água"] {
+.iniciais__modal--item .evolucoes h3[data-type*="water"] {
   background-color: #227093;
 }
 
-.iniciais__modal--item .evolucoes h3[data-tipo="Fogo"] {
+.iniciais__modal--item .evolucoes h3[data-type*="fire"] {
   background-color: #b33939;
 }
 
@@ -534,24 +534,24 @@ header .login__modal--overlay {
   -o-transition: all .4s ease-in-out;
 }
 
-.iniciais__modal--item .btn-escolher[data-tipo="Planta"] {
+.iniciais__modal--item .btn-escolher[data-type*="grass"] {
   background-color: #2ed573;
 }
-.iniciais__modal--item .btn-escolher[data-tipo="Água"] {
+.iniciais__modal--item .btn-escolher[data-type*="water"] {
   background-color: #74b9ff;
 }
-.iniciais__modal--item .btn-escolher[data-tipo="Fogo"] {
+.iniciais__modal--item .btn-escolher[data-type*="fire"] {
   background-color: #ff4757;
 }
 
-.iniciais__modal--item .btn-escolher[data-tipo="Planta"]:hover {
+.iniciais__modal--item .btn-escolher[data-type*="grass"]:hover {
   background-color: #218c74;
 }
 
-.iniciais__modal--item .btn-escolher[data-tipo="Água"]:hover {
+.iniciais__modal--item .btn-escolher[data-type*="water"]:hover {
   background-color: #227093;
 }
 
-.iniciais__modal--item .btn-escolher[data-tipo="Fogo"]:hover {
+.iniciais__modal--item .btn-escolher[data-type*="fire"]:hover {
   background-color: #b33939;
 }
