--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,6 +34,13 @@ header .header {
   width: 1200px;
 }
 
+@media screen and (max-width: 768px) {
+  header .header {
+    grid-template-columns: 1fr 3fr 1.2fr;
+    width: 100vw;
+  }
+}
+
 header .logo {
   align-items: center;
   cursor: pointer;
@@ -41,8 +48,20 @@ header .logo {
   justify-content: space-between;
 }
 
+@media screen and (max-width: 768px) {
+  header .logo {
+    justify-content: center;
+  }
+}
+
 header .logo .logo__imagem {
   width: 150px;
+}
+
+@media screen and (max-width: 768px) {
+  header .logo .logo__imagem {
+    width: 10vw;
+  }
 }
 
 header .logo .logo__imagem img {
@@ -65,6 +84,15 @@ header .busca input {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  header .busca input {
+    border-radius: 2vw;
+    height: 8vw;
+    padding: 0 3vw;
+    width: 45vw;
+  }
 }
 
 header .busca input:active,
@@ -161,6 +189,13 @@ header .login__modal--overlay {
   justify-content: space-between;
 }
 
+@media screen and (max-width: 768px) {
+  .iniciais__wrapper {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
+
 .iniciais__item {
   align-items: center;
   background-color: #f5f6fa;
@@ -177,6 +212,12 @@ header .login__modal--overlay {
   -moz-transition: all .4s ease-in-out;
   -ms-transition: all .4s ease-in-out;
   -o-transition: all .4s ease-in-out;
+}
+
+@media screen and (max-width: 768px) {
+  .iniciais__item {
+    width: 80vw;
+  }
 }
 
 .iniciais__item:hover {
